--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,8 @@ header {
     background-image: url('header-bg.jpg'); /* Add your header background image path here */
     background-size: cover;
     background-position: center;
-    color: black;
+    color: white;
+    font-color: black;
     padding: 40px 20px;
     text-align: center;
 }
