--- a/styles.css
+++ b/styles.css
@@ -4,12 +4,15 @@ body {
     padding: 0;
 }
 
+h1 {
+    font-color: black;
+}
+
 header {
     background-image: url('header-bg.jpg'); /* Add your header background image path here */
     background-size: cover;
     background-position: center;
     color: white;
-    font-color: black;
     padding: 40px 20px;
     text-align: center;
 }
